# SettingsManager

./: pyproject.toml
src/SettingsManager/: __init__.py  settings_manager.py
tests/: test_settings_manager.py
